--- a/config
+++ b/config
@@ -1,9 +1,9 @@
 [TRAINING]
-maxgen = 900
+maxgen = 1000
 popsize = 30
 threads = 4
 pool_training = False 
-loss = pixel_wise_L2
+loss = pixel_wise_CE
 predicting_method = highest_vote
 
 [SCALE]
@@ -13,17 +13,17 @@ test_n_neo = 26
 test_m_neo = 26
 
 [LOGGING]
-saving_interval = 10
-plotting_interval = 1
+saving_interval = 40
+plotting_interval = 20
 visualize_interval = 70000
 
 [DATASET]
-mnist_digits = (0,3,4)
-samples_per_digit = 5
+mnist_digits = (0, 1, 2, 3, 4, 5, 6, 7, 8, 9)
+samples_per_digit = 3
 
 [NETWORK]
-hidden_channels = 2
+hidden_channels = 5
 img_channels = 1
-iterations = 20
+iterations = 30
 moving = True
 current_pos = True
