Added possibility of different data, pos or no pos, and more

--- a/config
+++ b/config
@@ -4,7 +4,7 @@ popsize = 30
 init_sigma = 0.001
 threads = 4
 pool_training = False 
-loss = pixel_wise_CE_and_energy
+loss = pixel_wise_L2
 predicting_method = highest_value
 
 [SCALE]
@@ -19,13 +19,16 @@ plotting_interval = 20
 visualize_interval = 70000
 
 [DATASET]
-mnist_digits = (0, 1, 2, 3, 4)
+mnist_digits = (0, 1, 2, 3, 4, 5, 6, 7, 8, 9)
 samples_per_digit = 20
+data_func = get_MNIST_data
+# Size only matters if data_func = get_MNIST_data_resized
+size = 28
 
 [NETWORK]
-hidden_channels = 2
+hidden_channels = 3
 hidden_neurons = 20
 img_channels = 1
 iterations = 50
 moving = True
-current_pos = True
+position = None
