--- a/config
+++ b/config
@@ -1,10 +1,11 @@
 [TRAINING]
-maxgen = 3
+maxgen = 10
 popsize = 30
 init_sigma = 0.001
 threads = 4
-pool_training = False 
-loss = pixel_wise_L2
+pool_training = True 
+stable = True
+loss = pixel_wise_CE_and_energy
 predicting_method = highest_value
 
 [SCALE]
@@ -14,8 +15,8 @@ test_n_neo = 26
 test_m_neo = 26
 
 [LOGGING]
-saving_interval = 2
-plotting_interval = 2
+saving_interval = 100
+plotting_interval = 50
 visualize_interval = 70000
 
 [DATASET]
@@ -23,12 +24,12 @@ mnist_digits = (0, 1, 2, 3, 4)
 samples_per_digit = 10
 data_func = get_MNIST_data
 # Size only matters if data_func = get_MNIST_data_resized
-size = 56
+size = 28
 
 [NETWORK]
-hidden_channels = 4
-hidden_neurons = 10
+hidden_channels = 2
+hidden_neurons = 30
 img_channels = 1
-iterations = 10
+iterations = 50
 moving = True
 position = current
