--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 experiments
-old_scripts2.0
-__pycache__
-src/__pycache__
-replicate.py
-replicate*.py
-testtest.py
-to_delete.py
+*__pycache__
+*.DS_Store
