--- a/config
+++ b/config
@@ -41,11 +41,11 @@ visualize_interval = 70000
 
 mnist_digits = (0, 1, 2)
 
-samples_per_digit = 1
+samples_per_digit = 5
 
-data_func = get_simple_object
+data_func = get_simple_object_translated
 
-# Size only matters if data_func = get_MNIST_data_resized
+# Size only matters if data_func = get_MNIST_data_resized or get_simple_object or get_simple_object_translated
 size = 18
 
 # Colors only matters if data_func = get_CIFAR_data
@@ -54,7 +54,7 @@ colors = False
 
 [NETWORK]
 
-hidden_channels = 3
+hidden_channels = 1
 
 hidden_neurons = 10
 
